// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Discord Components V2 alpha.5 discord-unavailable 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
現在の状態を確認できません。時間をおいて更新してください。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 integration 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
現在の状態を確認できません。時間をおいて更新してください。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 large 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
対応が必要な項目があります。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 lfg 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS · コミュニティ管理
-# 要確認 · 新しいメンバーの状態を確認します",
          "type": 10,
        },
        {
          "divider": true,
          "spacing": 1,
          "type": 14,
        },
        {
          "content": "**詳しい分析から追加した要確認**
",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:1",
              "disabled": undefined,
              "emoji": {
                "name": "🔎",
              },
              "label": "要確認の一覧を見る",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "content": "**🔎 要確認 · 1 / 1**
<#944444444444444445> · 41分
返信待ち",
          "type": 10,
        },
        {
          "content": "**判定ルール**
対象条件に合う投稿で、他の人からの直接返信を確認できていません。
サポート・不具合相談・募集の対象で、過去24時間の投稿に20分を過ぎても返信・参加を確認できないものを候補にします。",
          "type": 10,
        },
        {
          "content": "**Discordで確認**
https://discord.com/channels/911111111111111111/944444444444444445/944444444444444446",
          "type": 10,
        },
        {
          "content": "-# 更新: <t:1790899200:R>",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:2",
              "options": [
                {
                  "default": false,
                  "emoji": {
                    "name": "🧭",
                  },
                  "label": "ホーム",
                  "value": "overview",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "👋",
                  },
                  "label": "新しいメンバー",
                  "value": "newMembers",
                },
                {
                  "default": true,
                  "emoji": {
                    "name": "🔎",
                  },
                  "label": "要確認",
                  "value": "attention",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "📊",
                  },
                  "label": "分析",
                  "value": "analysis",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "⚙️",
                  },
                  "label": "設定",
                  "value": "settings",
                },
              ],
              "placeholder": "ページを選ぶ",
              "type": 3,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:3",
              "disabled": true,
              "emoji": undefined,
              "label": "前へ",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:4",
              "disabled": false,
              "emoji": undefined,
              "label": "スタッフ確認済み",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": undefined,
              "label": "後で再確認",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": {
                "name": "✅",
              },
              "label": "対応済みにする",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:7",
              "disabled": true,
              "emoji": undefined,
              "label": "次へ",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:8",
              "disabled": undefined,
              "emoji": undefined,
              "label": "↻ 更新",
              "style": 2,
              "type": 2,
            },
            {
              "label": "Webで詳しく見る",
              "style": 5,
              "type": 2,
              "url": "https://nexus.example/dashboard",
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 no-data 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
現在の条件で、追加された要確認の記録はありません。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 partial 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
現在の条件で、追加された要確認の記録はありません。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 small 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS
-# 🧭 このサーバーの状況 · <t:1790899200:R>",
          "type": 10,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:1",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "状況を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 基本の分析
投稿・返信・新しい参加者の状況を確認できます。
基本の分析は、回数を使わずいつでも確認できます。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:2",
            "disabled": undefined,
            "emoji": {
              "name": "🔎",
            },
            "label": "要確認を見る",
            "style": 2,
            "type": 2,
          },
          "components": [
            {
              "content": "### 要確認
現在の条件で、追加された要確認の記録はありません。",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "accessory": {
            "custom_id": "nxs:fixture:3",
            "disabled": undefined,
            "emoji": {
              "name": "📊",
            },
            "label": "詳しく分析する",
            "style": 1,
            "type": 2,
          },
          "components": [
            {
              "content": "### 詳しい分析
設定した用途に合わせて、変化と確認したい点をまとめます。
残りの分析回数は確認できません。
最近の詳しい分析: まだ実行していません",
              "type": 10,
            },
          ],
          "type": 9,
        },
        {
          "content": "-# 返信は本文の意味を判断しません。ボイス同席は会話、イベント申込は参加を意味しません。",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:4",
              "disabled": undefined,
              "emoji": {
                "name": "🕘",
              },
              "label": "これまでの詳しい分析",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": {
                "name": "⚙️",
              },
              "label": "設定する",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": undefined,
              "label": "その他",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 support 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS · コミュニティ管理
-# 要確認 · 新しいメンバーの状態を確認します",
          "type": 10,
        },
        {
          "divider": true,
          "spacing": 1,
          "type": 14,
        },
        {
          "content": "**詳しい分析から追加した要確認**
",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:1",
              "disabled": undefined,
              "emoji": {
                "name": "🔎",
              },
              "label": "要確認の一覧を見る",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "content": "**🔎 要確認 · 1 / 1**
<#944444444444444445> · 41分
返信待ち",
          "type": 10,
        },
        {
          "content": "**判定ルール**
対象条件に合う相談投稿で、他の人の返信・参加を確認できていません。
サポート・不具合相談・募集の対象で、過去24時間の投稿に20分を過ぎても返信・参加を確認できないものを候補にします。",
          "type": 10,
        },
        {
          "content": "**Discordで確認**
https://discord.com/channels/911111111111111111/944444444444444445/944444444444444446",
          "type": 10,
        },
        {
          "content": "-# 更新: <t:1790899200:R>",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:2",
              "options": [
                {
                  "default": false,
                  "emoji": {
                    "name": "🧭",
                  },
                  "label": "ホーム",
                  "value": "overview",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "👋",
                  },
                  "label": "新しいメンバー",
                  "value": "newMembers",
                },
                {
                  "default": true,
                  "emoji": {
                    "name": "🔎",
                  },
                  "label": "要確認",
                  "value": "attention",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "📊",
                  },
                  "label": "分析",
                  "value": "analysis",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "⚙️",
                  },
                  "label": "設定",
                  "value": "settings",
                },
              ],
              "placeholder": "ページを選ぶ",
              "type": 3,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:3",
              "disabled": true,
              "emoji": undefined,
              "label": "前へ",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:4",
              "disabled": false,
              "emoji": undefined,
              "label": "スタッフ確認済み",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": undefined,
              "label": "後で再確認",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": {
                "name": "✅",
              },
              "label": "対応済みにする",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:7",
              "disabled": true,
              "emoji": undefined,
              "label": "次へ",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:8",
              "disabled": undefined,
              "emoji": undefined,
              "label": "↻ 更新",
              "style": 2,
              "type": 2,
            },
            {
              "label": "Webで詳しく見る",
              "style": 5,
              "type": 2,
              "url": "https://nexus.example/dashboard",
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`Discord Components V2 alpha.5 text 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 2578634,
      "components": [
        {
          "content": "## NEXUS · コミュニティ管理
-# 要確認 · 新しいメンバーの状態を確認します",
          "type": 10,
        },
        {
          "divider": true,
          "spacing": 1,
          "type": 14,
        },
        {
          "content": "**詳しい分析から追加した要確認**
",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:1",
              "disabled": undefined,
              "emoji": {
                "name": "🔎",
              },
              "label": "要確認の一覧を見る",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "content": "**🔎 要確認 · 1 / 1**
<#944444444444444445> · 41分
返信待ち",
          "type": 10,
        },
        {
          "content": "**判定ルール**
対象条件に合う投稿で、他の人からの直接返信を確認できていません。
サポート・不具合相談・募集の対象で、過去24時間の投稿に20分を過ぎても返信・参加を確認できないものを候補にします。",
          "type": 10,
        },
        {
          "content": "**Discordで確認**
https://discord.com/channels/911111111111111111/944444444444444445/944444444444444446",
          "type": 10,
        },
        {
          "content": "-# 更新: <t:1790899200:R>",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:2",
              "options": [
                {
                  "default": false,
                  "emoji": {
                    "name": "🧭",
                  },
                  "label": "ホーム",
                  "value": "overview",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "👋",
                  },
                  "label": "新しいメンバー",
                  "value": "newMembers",
                },
                {
                  "default": true,
                  "emoji": {
                    "name": "🔎",
                  },
                  "label": "要確認",
                  "value": "attention",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "📊",
                  },
                  "label": "分析",
                  "value": "analysis",
                },
                {
                  "default": false,
                  "emoji": {
                    "name": "⚙️",
                  },
                  "label": "設定",
                  "value": "settings",
                },
              ],
              "placeholder": "ページを選ぶ",
              "type": 3,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:3",
              "disabled": true,
              "emoji": undefined,
              "label": "前へ",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:4",
              "disabled": false,
              "emoji": undefined,
              "label": "スタッフ確認済み",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:5",
              "disabled": undefined,
              "emoji": undefined,
              "label": "後で再確認",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:6",
              "disabled": undefined,
              "emoji": {
                "name": "✅",
              },
              "label": "対応済みにする",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:7",
              "disabled": true,
              "emoji": undefined,
              "label": "次へ",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:8",
              "disabled": undefined,
              "emoji": undefined,
              "label": "↻ 更新",
              "style": 2,
              "type": 2,
            },
            {
              "label": "Webで詳しく見る",
              "style": 5,
              "type": 2,
              "url": "https://nexus.example/dashboard",
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;

exports[`error payload describes only the known failure and returns to its context 1`] = `
{
  "allowed_mentions": {
    "parse": [],
  },
  "components": [
    {
      "accent_color": 15548997,
      "components": [
        {
          "content": "## Discordの応答を確認できませんでした
-# Discordへのリクエストが時間内に完了しませんでした。少し待って状態を確認してください。",
          "type": 10,
        },
        {
          "divider": true,
          "spacing": 1,
          "type": 14,
        },
        {
          "content": "**操作結果**
変更が行われたか確認できません。同じ操作を繰り返す前に最新状態を確認してください。",
          "type": 10,
        },
        {
          "content": "**エラー参照ID**
**NXS-000000000001**",
          "type": 10,
        },
        {
          "components": [
            {
              "custom_id": "nxs:fixture:error",
              "disabled": undefined,
              "emoji": undefined,
              "label": "再試行",
              "style": 1,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:error",
              "disabled": undefined,
              "emoji": undefined,
              "label": "状態を確認",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nxs:fixture:error",
              "disabled": undefined,
              "emoji": undefined,
              "label": "要確認に戻る",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "type": 17,
    },
  ],
  "flags": 32768,
}
`;
